--- a/.github/workflows/azrarm_deploy.yml
+++ b/.github/workflows/azrarm_deploy.yml
@@ -25,6 +25,13 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           
+      - name: Resource Group creation
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.0.72
+          inlineScript: |
+            az group create --name $${{ env.AZURE_RG }} --location ${{ env.AZURE_LOCATION }}
+          
       - name: Deploy ARM Template
         id: deployarm
         uses: azure/arm-deploy@v1
